# advent-of-code

./: .gitignore
2021/ruby/lib/: bingo_board.rb  d1p1.rb  d1p2.rb  d2p1.rb  d2p2.rb  d3p1.rb  d3p2.rb  d4p1.rb  d4p2.rb  d5p1.rb  d5p2.rb  d6p1.rb  d6p2.rb  submarine.rb
2021/ruby/lib/vent_map/: grid_line.rb  vent_map.rb
2021/ruby/spec/: d1p1.rb  d1p2.rb  d2p1.rb  d2p2.rb  d3p1.rb  d3p2.rb  d4p1.rb  d4p2.rb  d5p1.rb  d5p2.rb  d6p1.rb  d6p2.rb  spec.rb
2024/ocaml/: .gitignore  dune-project
2024/ocaml/lib/: advent.ml  d1.ml  d1p1.ml  d2.ml  d3.ml  dune  shared.ml
2024/ocaml/test/: dune  shared.ml  test_advent.ml  test_d1.ml  test_d2.ml  test_d3.ml
day1/part1/ruby/lib/: d1p1.rb
day1/part1/ruby/spec/: spec.rb
day1/part2/ruby/lib/: d1p2.rb
day1/part2/ruby/spec/: spec.rb
day2/part1/ruby/lib/: d2p1.rb
day2/part1/ruby/spec/: spec.rb
day2/part2/ruby/lib/: d2p2.rb
day2/part2/ruby/spec/: spec.rb
day3/part1/ruby/lib/: d3p1.rb
day3/part1/ruby/spec/: spec.rb
day3/part2/ruby/: .rspec
day3/part2/ruby/lib/: d3p2.rb
day3/part2/ruby/spec/: spec.rb
